# genealogical-triangulation

./: README.md
data/recombination_rates/: READEME.md  decode_recombination_data.tab  fetch.sh  info
python/: bayes_deanonymize.py  calculate_probabilities.pyx  classify_relationship.py  cm.py  common_segments.pyx  data_logging.py  deanonymize_graph.py  diploid.py  evaluate_deanonymize.py  evaluate_deanonymize_progressive.py  evaluation.py  expansion.py  export_population.py  founder_stats.py  gamma.py  generate_cryptic_gamma.py  generate_population.py  generation.py  import_simulation.py  island_model.py  node.py  plot_statistics.py  population.py  population_genomes.py  population_statistics.py  random_queue.py  read_binary_simulation.py  recomb_genome.py  recomb_helper.pyx  run_classify_relationship.py  setup.py  sex.py  shared_length_speed.py  shared_segment_detector.py  symmetric_dict.py  test_common_segments.py  test_island.py  test_model.py  test_recomb_genome.py  to_json.py  (+3 more)
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/genome/: cm.rs  common_segments.rs  diploid.rs  genome.rs  mod.rs  population_genomes.rs  recombinator.rs  test.rs  test_common_segments.rs
rust/src/identify/: bayes.rs  distributions.rs  mod.rs
rust/src/population/: descendants.rs  founders.rs  kinship_coefficient.rs  mod.rs  node.rs  node_pair.rs
rust/src/simulate/: mod.rs  serializer.rs  simulate.rs  simulate_founder_stats.rs
rust/src/statistics/: fit.rs  gamma.rs  mod.rs
rust/src/util/: mod.rs  set_intersection.rs
