[package]
name = "genetic_privacy"
version = "0.1.0"
authors = ["Paul Ellenbogen <pe5@cs.princeton.edu>"]

[profile.release]
debug = true
debug-assertions = true

[dependencies]
ordered-float = "^0.4.0"
GSL = "^1.0"
rand = "^0.5.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
csv = "0.14"
bincode = "^0.8.0"
fnv = "^1.0.0"
clap = "^2.27.0"
pbr = "^1.0.1"
