[package]
name = "genetic_privacy"
version = "0.1.0"
authors = ["Paul Ellenbogen <PaulEllenbogen@gmail.com>"]

[profile.release]
debug = true
debug-assertions = true
lto = true

[dependencies]
ordered-float = "^0.4.0"
GSL = "^1.1"
rand = "^0.5.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
csv = "0.14"
bincode = "^0.8.0"
fnv = "^1.0.0"
clap = "^2.27.0"
pbr = "^1.0.1"
byteorder = "1"
rayon = "1.0"